based on our premodel

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@
 /das/csrnet_depth/dpt_large-midas-2f21e586.pt
 /das/csrnet_mask/new_mask.tar
 /das/mask_depth/mask_depth.tar
+das/csrnet_mask/__pycache__/model.cpython-38.pyc
+das/csrnet_mask/__pycache__/model.cpython-38.pyc
+das/csrnet_mask/__pycache__/model.cpython-38.pyc
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/share_newdas.iml
+.idea/vcs.xml
+das/csrnet_mask/__pycache__/model.cpython-38.pyc
