修复了乘10的问题

--- a/das/mask_depth3/settings.json
+++ b/das/mask_depth3/settings.json
@@ -1,4 +1,4 @@
 {
   "home_dir": "D:/renqun/new_das/new_das/das",
-  "maskmodel_dir": "D:\\renqun\\new_das\\new_das\\das\\mask_depth\\mask_depth.tar"
+  "maskmodel_dir": "D:/renqun/share_newdas/das/mask_depth2/ressultModels/second_Amodel_best.pth.tar"
 }
